--- a/index.html
+++ b/index.html
@@ -124,7 +124,20 @@
 
         <!--==================== LOGOS ====================-->
         <section class="logos section">
-
+            <div class="logos__container container grid">
+                <div class="logos__img">
+                    <img src="assets/img/logo1.png" alt="">
+                </div>
+                <div class="logos__img">
+                    <img src="assets/img/logo2.png" alt="">
+                </div>
+                <div class="logos__img">
+                    <img src="assets/img/logo3.png" alt="">
+                </div>
+                <div class="logos__img">
+                    <img src="assets/img/logo4.png" alt="">
+                </div>
+            </div>
         </section>
 
         <!--==================== POPULAR ====================-->
