--- a/index.html
+++ b/index.html
@@ -141,8 +141,66 @@
         </section>
 
         <!--==================== POPULAR ====================-->
-        <section class="section" id="popular">
-
+        <section class="popular section" id="popular">
+            <div class="container">
+                <span class="section__subtitle">Best Choices</span>
+                <h2 class="section__title">Popular Residences<span>.</span> </h2>
+                <div class="popular__container swiper">
+                    <div class="swiper-wrapper">
+                        <article class="popular__card swiper-slide">
+                            <img src="assets/img/popular1.jpg" alt="pop1" class="popular__img">
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>Kshs.</span>6,635,600</h2>
+                                <h3 class="popular__title">Garden City Assat</h3>
+                                <p class="popular__description">Street The Garden City Of Miraflores, Lima - Perú Av.
+                                    Sol #9876</p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="assets/img/popular2.jpg" alt="pop1" class="popular__img">
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>Kshs.</span>3,515,900</h2>
+                                <h3 class="popular__title">Gables Luxurious House</h3>
+                                <p class="popular__description">Street The Garden City Of Miraflores, Lima - Perú Av.
+                                    Sol #9876</p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="assets/img/popular3.jpg" alt="pop1" class="popular__img">
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>Kshs.</span>6,202,400</h2>
+                                <h3 class="popular__title">Luxurious City Garden</h3>
+                                <p class="popular__description">Street The Garden City Of Miraflores, Lima - Perú Av.
+                                    Sol #9876</p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="assets/img/popular4.jpg" alt="pop1" class="popular__img">
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>Kshs.</span>7,504,300</h2>
+                                <h3 class="popular__title">Garden Orchard Cityt</h3>
+                                <p class="popular__description">Street The Garden City Of Miraflores, Lima - Perú Av.
+                                    Sol #9876</p>
+                            </div>
+                        </article>
+                        <article class="popular__card swiper-slide">
+                            <img src="assets/img/popular5.jpg" alt="pop1" class="popular__img">
+                            <div class="popular__data">
+                                <h2 class="popular__price"><span>Kshs.</span>4,704,300</h2>
+                                <h3 class="popular__title">Aliva Private Garden</h3>
+                                <p class="popular__description">Street The Garden City Of Miraflores, Lima - Perú Av.
+                                    Sol #9876</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-button-next">
+                        <i class="bx bx-chevron-right"></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class="bx bx-chevron-left"></i>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--==================== VALUE ====================-->
