theme_footer_links(social)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                     </li>
                 </ul>
             </div>
+            <i class="bx bx-moon change-theme" id="theme-button"></i>
+
             <a href="#" class="button nav__button">
                 Subscribe
             </a>
@@ -366,18 +368,86 @@
 
         <!--==================== SUBSCRIBE ====================-->
         <section class="subscribe section">
-
+            <div class="subscribe__container container">
+                <h1 class="subscribe__title">Get Started With Hello Homes</h1>
+                <p class="subscribe__description">
+                    Subscribe and find super attractive price
+                    quotes from us, Find your residence soon.
+                </p>
+                <a href="#" class="subscribe__button button">
+                    Get Started
+                </a>
+            </div>
         </section>
     </main>
 
     <!--==================== FOOTER ====================-->
     <footer class="footer section">
+        <div class="footer__container container grid">
+            <div>
+                <a href="#" class="footer__logo">
+                    Hello Homes <i class="bx bxs-home-alt-2"></i>
+                </a>
+                <p class="footer__description">
+                    Our vision is ... Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Aperiam, expedita.
+                </p>
+            </div>
+            <div class="footer__content">
+                <div>
+                    <h3 class="footer__title">About</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">About Us</a></li>
+                        <li><a href="#" class="footer__link">Features</a></li>
+                        <li><a href="#" class="footer__link">News & Blog</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer__title">Company</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">How We Work?</a></li>
+                        <li><a href="#" class="footer__link">Capital</a></li>
+                        <li><a href="#" class="footer__link">Security</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer__title">Support</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">FAQs</a></li>
+                        <li><a href="#" class="footer__link">Support center</a></li>
+                        <li><a href="#" class="footer__link">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer__title">Follow us</h3>
+                    <ul class="footer__social">
+                        <li><a href="https://www.facebook.com/" class="footer__social-link" target="_blank"><i
+                                    class="bx bxl-facebook-circle"></i></a></li>
+                        <li><a href="https://www.instagram.com/" class="footer__social-link" target="_blank"><i
+                                    class="bx bxl-instagram-alt"></i></a></li>
+                        <li><a href="https://www.pinterest.com/" class="footer__social-link" target="_blank"><i
+                                    class="bx bxl-pinterest"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
+        <div class="footer__info container">
+            <span class="footer__copy">
+                &#169; Seth-Kimani. All rights reserved
+            </span>
+            <div class="footer__privacy">
+                <a href="#">Terms & Agreements</a>
+                <a href="#">Privacy Policy</a>
+
+            </div>
+        </div>
     </footer>
 
 
     <!--========== SCROLL UP ==========-->
-
+    <a href="#" class="scroll-up" id="scroll-up">
+        <i class="bx bx-chevrons-up"></i>
+    </a>
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src="assets/js/scrollreveal.min.js"></script>
