--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Real Estate Website - Seth Kimani</title>
+    <title>Hello Homes - Real Estate Website</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Real Estate <i class='bx bxs-home-alt-2'></i>
+                Hello Homes <i class='bx bxs-home-alt-2'></i>
             </a>
             <div class="nav__menu">
                 <ul class="nav__list">
