--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
                             <div class="contact__card-info">
                                 <i class='bx bxs-envelope'></i>
                                 <div>
-                                    <h3 class="contact__card-title">Message</h3>
+                                    <h3 class="contact__card-title">Email</h3>
                                     <p class="contact__card-description">022.321.165.19</p>
                                 </div>
                             </div>
-                            <button class="button contact__card-button">Message Now</button>
+                            <button class="button contact__card-button">Email Now</button>
                         </div>
                     </div>
                 </div>
@@ -389,7 +389,7 @@
                     Hello Homes <i class="bx bxs-home-alt-2"></i>
                 </a>
                 <p class="footer__description">
-                    Our vision is ... Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Aperiam, expedita.
+                    Our vision is ... Lorem, ipsum dt <br> consectetur adipisicing elit.
                 </p>
             </div>
             <div class="footer__content">
