--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">
+            <a href="#" class="nav__logo">
                 Hello Homes <i class='bx bxs-home-alt-2'></i>
             </a>
             <div class="nav__menu">
