--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         <div class="footer__info container">
             <span class="footer__copy">
-                &#169; Seth-Kimani. All rights reserved
+                &#169; Hello-Homes Ltd. All rights reserved
             </span>
             <div class="footer__privacy">
                 <a href="#">Terms & Agreements</a>
